Pair capture and restore into symmetric TypeHandler strategies
JdiHeapWalker and HeapRestorer had grown parallel per-type dispatch
tables that were easy to get out of sync — a new JDK type meant
changes in three places (capture path, allocate path, populate path)
scattered across two ~500-line files.

Introduce a handlers/ subpackage where each JDK weirdness lives in one
file with both its capture and restore code paired together:

- CollectionHandler: all supported JDK collections + EnumSet/EnumMap.
- StringBuilderHandler: StringBuilder / StringBuffer.
- BoxedPrimitiveHandler: Integer, Long, Double, Float, Short, Byte,
  Character, Boolean.
- ImmutableJdkHandler: BigDecimal, BigInteger, UUID, URI, java.time.*.
- EnumHandler: any enum (including anonymous-subclass Java 8 variants).
- PlainObjectHandler: bare java.lang.Object sentinel.
- OpaqueJdkHandler: fail-fast catch-all for unsupported JDK internals.
- RegularObjectHandler: Objenesis + reflective field set, final fallback.

A TypeHandlerRegistry iterates handlers in priority order; the first
whose capturesType / restoresSnapshot returns true wins. Order is
deliberate and documented because Collection/Immutable/Enum all live
in java.* packages and must be matched before OpaqueJdkHandler's
fail-fast fires.

JdiHeapWalker and HeapRestorer become short coordinators: primitives,
strings, arrays, and null dispatched directly; everything else goes
through the registry. The dead classStructureHashes map is removed —
the hash is already embedded in ObjectSnapshot.

No behaviour change. All 219 unit tests and 44 E2E tests green.

https://claude.ai/code/session_01MTkP3V6eYqfco7AjXJ2Wok